# BackPack-price-prediction-with-full-ML-cycle

./: .gitignore  LICENSE  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml  setup.py
.dvc/: config
artifacts/: preprocessor.pkl
mlruns/0/: meta.yaml
mlruns/981949441832187791/: meta.yaml
mlruns/981949441832187791/c77f3345504d4a2a89aa2c2da0be4d88/: meta.yaml
mlruns/981949441832187791/c77f3345504d4a2a89aa2c2da0be4d88/metrics/: train_mae  train_r2  train_rmse
mlruns/981949441832187791/c77f3345504d4a2a89aa2c2da0be4d88/tags/: mlflow.source.git.commit
mlruns/981949441832187791/cd1b2fb40d2240e993e14312bc8b31f9/: meta.yaml
mlruns/981949441832187791/cd1b2fb40d2240e993e14312bc8b31f9/artifacts/: evaluation_metrics.json
mlruns/981949441832187791/cd1b2fb40d2240e993e14312bc8b31f9/metrics/: train_mae  train_r2  train_rmse
mlruns/981949441832187791/cd1b2fb40d2240e993e14312bc8b31f9/tags/: mlflow.runName  mlflow.source.name
mlruns/981949441832187791/e9deb14f591f49ed89e7cc0a1b7f8350/: meta.yaml
mlruns/981949441832187791/e9deb14f591f49ed89e7cc0a1b7f8350/metrics/: cv_rmse  cv_rmse_std  val_mae  val_r2  val_rmse
mlruns/981949441832187791/e9deb14f591f49ed89e7cc0a1b7f8350/params/: top_feature_importance
mlruns/models/random_forest_regressor/: meta.yaml
notebooks/: exp1.ipynb
src/data_processing/: data_ingestion.py  data_preprocessing.py
src/feature_eng/: feature_engineering.py
src/logger/: __init__.py
src/modelbuild/: model_evaluation.py  model_pull.py  model_registry.py  model_training.py
(+8 files in other folders)
